# seaman-reborn

./: .gitignore  .last-branch  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  Seaman 2_ Modern Tech Blueprint.txt  blueprint_clean.txt  blueprint_text.txt  plan_raw.txt  prd.json  progress.txt  pyproject.toml  ralph.ps1  ralph.sh
config/: default.toml  presets.toml
config/stages/: frogman.toml  gillman.toml  mushroomer.toml  podfish.toml  tadman.toml
docker/: ngc_login.sh
docs/superpowers/plans/: 2026-03-10-gui-rewrite-modern-minimal.md  2026-03-12-game-loop-refactor-riva-fix.md
docs/superpowers/specs/: 2026-03-10-gui-rewrite-modern-minimal-design.md
src/seaman_brain/: __init__.py  __main__.py  config.py  types.py
src/seaman_brain/api/: __init__.py  actions.py  protocol.py  server.py  streaming.py
src/seaman_brain/audio/: __init__.py  aec.py  manager.py  pipeline.py  riva_launcher.py  stt.py  tts.py
src/seaman_brain/behavior/: __init__.py  autonomous.py  events.py  mood.py
src/seaman_brain/cli/: __init__.py  commands.py  terminal.py
src/seaman_brain/conversation/: __init__.py  context_assembler.py  deduplicator.py  manager.py
src/seaman_brain/creature/: __init__.py  evolution.py  genetics.py  genome.py  inheritance.py  lineage.py  persistence.py  self_model.py  state.py
src/seaman_brain/environment/: __init__.py  clock.py  tank.py
src/seaman_brain/gui/: __init__.py  action_bar.py  audio_integration.py  chat_panel.py  device_utils.py  game_loop.py  game_systems.py  hud.py  input_handler.py  interactions.py  layout.py  lineage_panel.py  render_engine.py  response_handler.py  scene_manager.py  settings_panel.py  sprites.py  tank_renderer.py  theme.py  widgets.py  window.py
src/seaman_brain/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py  router.py  scheduler.py
src/seaman_brain/memory/: __init__.py  embeddings.py  episodic.py  extractor.py  retriever.py  semantic.py
src/seaman_brain/needs/: __init__.py  care.py  death.py  feeding.py  system.py
src/seaman_brain/personality/: __init__.py  constraints.py  prompt_builder.py  traits.py
src/seaman_brain/vision/: __init__.py  bridge.py  capture.py  observer.py
tests/: conftest.py  test_config.py  test_types.py  test_version.py
tests/test_api/: test_actions.py  test_protocol.py  test_server.py  test_streaming.py
tests/test_audio/: test_aec.py  test_manager.py  test_pipeline.py  test_riva_launcher.py  test_stt.py  test_tts.py
tests/test_behavior/: test_autonomous.py  test_events.py  test_mood.py
tests/test_cli/: test_commands.py  test_terminal.py
tests/test_conversation/: test_context_assembler.py  test_deduplicator.py  test_manager.py
tests/test_creature/: test_evolution.py  test_genetics.py  test_genome.py  test_inheritance.py  test_lineage.py  test_persistence.py  test_persistence_bloodlines.py  test_self_model.py  test_state.py
tests/test_environment/: test_clock.py  test_tank.py
tests/test_gui/: test_action_bar.py  test_audio_integration.py  test_chat_panel.py  test_device_utils.py  test_game_loop.py  test_game_systems.py  test_hud.py  test_input_handler.py  test_interactions.py  test_layout.py  test_lineage_panel.py  test_render_engine.py  test_response_handler.py  test_scene_manager.py  test_settings_crash.py  test_settings_panel.py  test_sprites.py  test_tank_renderer.py  test_theme.py  test_widgets.py  test_window.py
tests/test_integration/: test_brain_core.py  test_full_game.py
tests/test_llm/: test_anthropic_provider.py  test_base.py  test_factory.py  test_ollama_provider.py  test_openai_provider.py  test_router.py  test_scheduler.py
tests/test_memory/: test_embeddings.py  test_episodic.py  test_extractor.py  test_retriever.py  test_semantic.py
tests/test_needs/: test_care.py  test_death.py  test_feeding.py  test_system.py
tests/test_personality/: test_constraints.py  test_prompt_builder.py  test_traits.py
tests/test_vision/: test_bridge.py  test_capture.py  test_observer.py
