[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seaman-brain"
version = "0.1.0"
description = "AI Brain Core for Seaman Reborn - sardonic creature cognition engine"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "djb" }]
dependencies = [
    "ollama>=0.4",
    "lancedb>=0.17",
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
cloud = [
    "openai>=1.50",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]
all = ["seaman-brain[cloud,dev]"]

[project.scripts]
seaman-brain = "seaman_brain.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]
